Several fixes and display improvements to flashcard and name games. Fix for checklist page which corrects images overlapping scientific and common names when display as images and common names is selected.

--- a/css/base.css
+++ b/css/base.css
@@ -132,7 +132,7 @@ div.tndiv{
 	float: left;
 	text-align: center;
 	width: 165px;
-	height: 210px;
+	height: 250px;
 }
 
 div.tnimg{
